[package]
name = "rusting"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.19"
rand = "0.8.5"

[[bin]]
name = "deck"
path = "deck/main.rs"

[[bin]]
name = "bank"
path = "bank/main.rs"

[[bin]]
name = "media"
path = "media/main.rs"

[[bin]]
name = "logs"
path = "logs/main.rs"

[[bin]]
name = "iter"
path = "iter/main.rs"

[[bin]]
name = "lifetimes"
path = "lifetimes/main.rs"

[[bin]]
name = "generics"
path = "generics/main.rs"

[[bin]]
name = "traits"
path = "traits/main.rs"